# JumpStart

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: ci.yaml  publish-ghcr.yaml
docker/: Dockerfile.dev  docker-compose.yaml
src/: main.py
src/api/: endpoint.py
src/api/routes/: api_health.py
src/core/: config.py  event.py  logger.py
src/models/schema/: base.py
src/utils/: formatter.py
tests/: conftest.py
tests/integration/routes/: test_api_health.py
tests/unit/: test_src_version.py
tests/unit/core/: test_config.py
